# communitytools

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PENTEST_SKILL_UPDATES_SUMMARY.md  README.md  SECURITY.md
.claude/: OUTPUT_STANDARDS.md  agents  formats
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: APPLY_TEMPLATE_GUIDE.md  CLAUDE.md  GUIDE.md  README.md  contribute-skill.md  git-branch-manager.md  git-issue-creator.md  git-pr-creator.md  hackerone-bounty-hunter.md  hackerone-hunter.md  pentester.md  skill-generator.md  skiller.md
.claude/commands/: CLAUDE.md  README.md  branch.md  commit.md  fix-pipeline.md  hackerone.md  issue.md  lint.md  merge.md  pentest.md  pr.md  push.md  skiller.md  test.md
.claude/skills/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_skill_proposal.yml
benchmarks/: .gitignore  OVERVIEW.md  QUICKSTART.md  README.md  analyze_results.py  run_benchmarks.py
formats/: INDEX.md  data.md  htb-completion-report.md  logs.md  reconnaissance.md  sensitive-data-metadata.md  techstack-evidence-formatter.md  techstack-json-report.md  techstack-report-exporter.md
mcp/transilience-vuln/: README.md  claude_desktop_config.snippet.json  pyproject.toml  server.py
papers/: practice-makes-perfect.md
pentest/: .gitignore  README.md
scripts/: debug-mcp.sh  kali-claude-setup.sh  skill_linter.py
skills/: INDEX.md
tools/: README.md  SETUP.md  block-coordinator-ask.py  env-reader.py  nvd-lookup.py  session-start.py  stats-updater.py
(+1379 files in other folders)
